--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "hexo-site",
-  "version": "2.8.3",
+  "name": "thedotmack-com",
+  "version": "2.0.0",
   "private": true,
+  "hexo": {
+    "version": "3.0.1"
+  },
   "dependencies": {
-    "hexo-livereload": "^0.1.0",
-    "hexo-migrator-image": "^1.0.3",
-    "hexo-migrator-wordpress": "^0.1.1",
-    "hexo-renderer-ejs": "*",
-    "hexo-renderer-marked": "*",
-    "hexo-renderer-stylus": "*"
+    "hexo": "^3.0.0",
+    "hexo-deployer-git": "0.0.4",
+    "hexo-generator-archive": "^0.1.0",
+    "hexo-generator-category": "^0.1.0",
+    "hexo-generator-index": "^0.1.0",
+    "hexo-generator-tag": "^0.1.0",
+    "hexo-renderer-ejs": "^0.1.0",
+    "hexo-renderer-marked": "^0.2.4",
+    "hexo-renderer-stylus": "^0.2.0",
+    "hexo-server": "^0.1.2"
   }
 }
